@@ -1,5 +1,6 @@
 2010-01-19  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
+	* Fixed bug: #13275: sortable_updatePasteButtons not needed anymore
 	* Fixed bug: #11520: DS Tag for Hiding Field Preview Data (part 2)
 	* Fixed bug: #13154: Deleting the last element from a section in an FCE crashes rendering
 	* Fixed bug: #3843: Unmapping does not hide ce field in page module
